ultimo antes de la entrega

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <p class="bienvenida">bienvenidos</p>
                 <h2>Soy <span>Angel Rios</span>, diseñador web</h2>
                 <p class="descricion">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Consequatur tenetur quis hic molestiae dolor, quasi qui odit, dolores soluta cupiditate doloribus dignissimos dolore dicta sed cum, quisquam error quaerat delectus.
+                    Buen criterio e ideas frescas son palabras que hablan de mi trabajo.
+                    Retos nuevos que desafien mis habilidades son las clases de proyectos en los que me gusta participar, donde la creatividad y el trabajo en equipo son las mejores herramientas.   
                 </p>
             </div>
         </div>
@@ -48,16 +48,18 @@
     <!-- Sobre mi -->
     <section id="sobremi">
         <div class="contenido-foto">
-            <img src="statics/img/simbolo.jpg" alt="foto de perfil">
+            <img src="statics/foto.jpg" alt="foto de perfil">
         </div>
         <div class="sobremi">
             <p class="seccion-titulo">Sobre mi</p>
             <h2>Hola soy <span>Angel Rios</span></h2>
             <h3>Desarrollador web</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta cum facere libero,
-                illum minima dolorum dolore ea adipisci magnam beatae ut hic provident
-                optio? Ducimus distinctio at consequuntur nesciunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, maiores fuga omnis deserunt.</p>
+            <p>
+                Con mas de 3 años de capacitacion en distintos cursos como los introducion ala 
+                    programacion, desarrollo web y bases de datos, mis experiencia son trabajos finales 
+                de los mencionados aprovados. Manejos de tencnologia frontend como Html, Css y JavaScript y frameworks para frontend
+            como Bootstrap y tecnologias para backend como python y frameworks como django y flask. </p>
+            <p>se destaca mi buen trato en los grupos laborales, buenos modales y un claro manejo de habilidades blandas.</p>
             <a href="">Descargar CV</a>    
         </div>
     </section>
